--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>, 
 Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   dh-autoreconf,
   po-debconf, bash-completion,
-  febootstrap (>= 3.20~),
+  febootstrap (>= 3.20~), febootstrap (<<4),
   libreadline-dev, libaugeas-dev, libselinux1-dev, libhivex-dev, libvirt-dev,
   libmagic-dev, libncurses5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin, systemtap-sdt-dev,
