Tighten ntfs-3g dependency (Closes: #708520)

--- a/debian/control
+++ b/debian/control
@@ -107,8 +107,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   iproute,
   libaugeas0,
 # nilfs2-tools,
-  ntfs-3g,
-  ntfs-3g (>> 1:2011.10.9AR.1-4~) | ntfsprogs,
+  ntfs-3g (>> 1:2012.1.15AR.5-2.1~),
   reiserfsprogs,
   udev,
   vim-tiny,
