--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   libcap-dev, libacl1-dev, libyajl-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
-  qemu-kvm (>= 0.13),
+  qemu-system (>= 0.13),
   genisoimage, pkg-config,
   erlang-dev,
   dh-lua,
@@ -95,7 +95,7 @@ Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
   supermin,
-  qemu-kvm (>= 0.13),
+  qemu-system (>= 0.13),
   bsdmainutils,
   btrfs-tools,
   cryptsetup,
