--- a/debian/rules
+++ b/debian/rules
@@ -147,5 +147,6 @@ override_dh_makeshlibs:
 
 %:
 	dh $@ \
+	   --parallel \
 	   --without=python-support \
 	   --with=autoreconf,ocaml,python2,python3,bash-completion,ruby,gir,lua
