--- a/debian/rules
+++ b/debian/rules
@@ -138,7 +138,7 @@ override_dh_install:
 
 	erlang-depends -perlang-guestfs
 
-	dh_install -X.la -X.so.owner --fail-missing
+	dh_install -X.la -X.so.owner -Xbindtests --fail-missing
 
 # Workaround for Lintian warning
 # "{pre,post}inst-has-useless-call-to-ldconfig"
