--- a/debian/control
+++ b/debian/control
@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   dh-autoreconf,
   po-debconf, bash-completion,
   supermin,
-  libreadline-dev, libaugeas-dev, libselinux1-dev, libhivex-dev, libvirt-dev,
+  libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-dev, libvirt-dev,
   libmagic-dev, libncurses5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin, systemtap-sdt-dev,
   libcap-dev, libacl1-dev, libyajl-dev,
