--- a/debian/control
+++ b/debian/control
@@ -6,21 +6,21 @@ Uploaders: Richard Jones <rjones@redhat.com>, Guido Günther <agx@sigxcpu.org>, 
 Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   dh-autoreconf,
   po-debconf, bash-completion,
-  supermin,
+  supermin (>= 4.1.5-2~),
   libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-dev, libvirt-dev,
   libmagic-dev, libncurses5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin, systemtap-sdt-dev,
   libcap-dev, libacl1-dev, libyajl-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
-  qemu-system-x86 [i386 amd64],
+  qemu-system-x86 [i386 amd64], qemu-utils,
   genisoimage, pkg-config,
   erlang-dev,
   dh-lua,
   dh-ocaml, ocaml-nox, ocaml-findlib, libpcre-ocaml-dev, libgettext-ocaml-dev,
   python (>= 2.6.6-3~), python-all-dev (>= 2.6.6-3~), python3-all-dev,
   default-jdk,
-  gem2deb, rake,
+  gem2deb, rake, libjs-jquery,
   libtest-pod-coverage-perl, libextutils-command-perl, libintl-perl, libtest-pod-perl,
   libstring-shellquote-perl,
   libsys-virt-perl, libwin-hivex-perl,
@@ -28,6 +28,7 @@ Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   libglib2.0-dev, gjs, gobject-introspection, libgirepository1.0-dev, gtk-doc-tools,
   netpbm, icoutils,
   po4a,
+  curl,
 Homepage: http://libguestfs.org
 Standards-Version: 3.9.4
 Vcs-Git: git://git.debian.org/git/pkg-libvirt/libguestfs.git
@@ -94,7 +95,7 @@ Architecture: i386 amd64
 Multi-Arch: same
 Pre-Depends: ${misc:Pre-Depends}
 Depends: ${shlibs:Depends}, ${misc:Depends},
-  supermin,
+  supermin (>= 4.1.5-2~),
   qemu-system-x86 [i386 amd64],
   bsdmainutils,
   btrfs-tools,
