--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Build-Depends: debhelper (>= 9~), autotools-dev, aptitude,
   libreadline-dev, libaugeas-dev (>= 1.0.0), libselinux1-dev, libhivex-dev, libvirt-dev,
   liblzma-dev, libmagic-dev, libncurses5-dev, libpcre3-dev, libxml2-dev,
   libconfig-dev, libc-dev-bin, systemtap-sdt-dev,
-  libcap-dev, libacl1-dev, libyajl-dev,
+  libcap-dev, libacl1-dev, libyajl-dev, libsystemd-journal-dev,
   automake, autoconf, libtool,
   gperf, libxml2-utils,
   qemu-system-x86 [i386 amd64], qemu-utils,
