Replaced dependencies: module-init-tools -> kmod (Closes: #733698)

--- a/debian/control
+++ b/debian/control
@@ -50,8 +50,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   cpio,
   dosfstools,
   file,
+  kmod,
   lsof,
-  module-init-tools,
   net-tools,
   parted,
   procps,
@@ -108,9 +108,9 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   dosfstools,
   file,
   jfsutils,
+  kmod,
   lsof,
   lvm2,
-  module-init-tools,
   net-tools,
   parted,
   procps,
