--- a/debian/control
+++ b/debian/control
@@ -38,6 +38,68 @@ Build-Depends: debhelper (>= 9),
   curl,
   flex, bison,
   golang-go [i386 amd64 armel armhf],
+# for appliance
+  linux-image-versatile [armel armhf],
+  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malte [mips mipsel],
+  linux-image-s390x [s390x],
+  linux-image-powerpc [powerpc],
+  linux-image-sparc64 [sparc],
+  linux-image-amd64 [amd64], linux-image-486 [i386] | linux-image-686-pae [i386],
+  acl,
+  attr,
+  binutils,
+  bsdmainutils,
+  btrfs-tools,
+  bzip2,
+  cpio,
+  cryptsetup,
+  dosfstools,
+  extlinux,
+  file,
+  gawk,
+  gdisk,
+  genisoimage,
+  gfs2-utils,
+# gfs-tools,
+  grub-pc,
+  hfsplus,
+  iproute,
+  jfsutils,
+  kmod,
+  less,
+  libaugeas0,
+  libcap2,
+  libhivex0,
+  libpcre3,
+  libsystemd-id128-0, libsystemd-journal0,
+  libxml2,
+  libyajl2,
+  lsof,
+  lsscsi,
+  lvm2,
+  lzop,
+  mdadm,
+  module-init-tools,
+  mtools,
+  nilfs-tools,
+  ntfs-3g,
+# ocfs2-tools,
+  openssh-client,
+  parted,
+  procps,
+  psmisc,
+  reiserfsprogs,
+  rsync,
+  scrub,
+  strace,
+  syslinux,
+  udev,
+# ufsutils,
+  vim-tiny,
+  xfsprogs,
+  xz-utils,
+  zerofree,
+  zfs-fuse,
 Homepage: http://libguestfs.org
 Standards-Version: 3.9.5
 Vcs-Git: git://git.debian.org/git/pkg-libvirt/libguestfs.git
