--- a/debian/rules
+++ b/debian/rules
@@ -18,30 +18,20 @@ QEMU_CPU := $(shell dpkg-architecture -qDEB_HOST_GNU_CPU \
 		    | sed -e 's,i[456]86,i386,;s,sparc,sparc64,;s,powerpc,ppc,;s,arm.*,arm,')
 
 DEFAULT_CONFIG_FLAGS = \
-	--disable-appliance        \
 	--disable-gnulib-tests     \
 	--with-readline	           \
 	--disable-haskell          \
 	--disable-php	           \
 	--enable-gtk-doc           \
-	--with-qemu=qemu-system-$(QEMU_CPU)
+	--with-qemu=qemu-system-$(QEMU_CPU) \
+	--with-supermin-extra-options='--use-installed'
 
 BARE_CONFIG_FLAGS = \
 	$(DEFAULT_CONFIG_FLAGS) \
-	--disable-daemon --disable-fuse \
+	--disable-fuse \
 	--disable-ocaml --disable-perl \
 	--disable-erlang --with-java=no \
 	--disable-gobject --without-java
-
-# needed as input for supermin(8)
-APPLIANCE_PREREQ = make.sh packagelist
-# added after supermin --prepare
-APPLIANCE_EXTRA = \
-	hostfiles excludefiles \
-	daemon.tar.gz          \
-	init.tar.gz            \
-	udev-rules.tar.gz
-APPLIANCE = $(APPLIANCE_PREREQ) $(APPLIANCE_EXTRA)
 
 override_dh_auto_clean:
 	set -e; for p in $(BUILDS); do \
@@ -103,16 +93,9 @@ override_dh_auto_build:
 			   EXTRA_JAVAC_FLAGS+="-source 1.6 -target 1.6" ; \
 	done
 
-	# also build part of appliance
-	$(MAKE) -C $(CURDIR)/debian/build-default/appliance \
-		$(APPLIANCE)                      \
-		libguestfs-make-fixed-appliance   \
-		libguestfs-make-fixed-appliance.1
-
 override_dh_auto_test:
 	set -e; for p in $(BUILDS); do \
-		dh_auto_test --builddir=$(CURDIR)/debian/build-$$p \
-			-- CFLAGS="$(filter-out -Werror=format-security,$(CFLAGS))"; \
+		make -C $(CURDIR)/debian/build-$$p quickcheck; \
 	done
 
 override_dh_auto_install:
@@ -125,26 +108,6 @@ override_dh_auto_install:
 	done
 
 override_dh_install:
-# We do not install supermin.d/base.*, but ship make.sh which can be
-# used to build it.
-	mkdir -p debian/tmp/usr/lib/guestfs \
-		debian/tmp/usr/sbin/ \
-		debian/tmp/usr/share/man/man1 \
-		debian/tmp/lib/udev/rules.d/appliance/
-	install -m644 \
-		$(patsubst %,debian/build-default/appliance/%,$(APPLIANCE)) \
-		debian/tmp/usr/lib/guestfs/
-	chmod 755 debian/tmp/usr/lib/guestfs/make.sh
-	install -m755 \
-		debian/build-default/appliance/libguestfs-make-fixed-appliance \
-		debian/tmp/usr/sbin/
-	install -m644 \
-		debian/build-default/appliance/libguestfs-make-fixed-appliance.1 \
-		debian/tmp/usr/share/man/man1/
-	install -m644 \
-		appliance/99-guestfs-serial.rules \
-		debian/tmp/lib/udev/rules.d/
-
 	erlang-depends -perlang-guestfs
 
 	dh_install -X.la -X.so.owner -Xbindtests -X/usr/lib/go/ \
