Fixed build-dependencies for non-x86 architectures
extlinux is only available on x86, armhf gets a different kernel

--- a/debian/control
+++ b/debian/control
@@ -39,7 +39,8 @@ Build-Depends: debhelper (>= 9),
   flex, bison,
   golang-go [i386 amd64 armel armhf],
 # for appliance
-  linux-image-versatile [armel armhf],
+  linux-image-versatile [armel],
+  linux-image-armmp [armhf],
   linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malte [mips mipsel],
   linux-image-s390x [s390x],
   linux-image-powerpc [powerpc],
@@ -54,7 +55,7 @@ Build-Depends: debhelper (>= 9),
   cpio,
   cryptsetup,
   dosfstools,
-  extlinux,
+  extlinux [i386 amd64],
   file,
   gawk,
   gdisk,
