Fixed up build-dependencies so we can at least have a stab at building on !x86

--- a/debian/control
+++ b/debian/control
@@ -41,7 +41,7 @@ Build-Depends: debhelper (>= 9),
 # for appliance
   linux-image-versatile [armel],
   linux-image-armmp [armhf],
-  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malte [mips mipsel],
+  linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel],
   linux-image-s390x [s390x],
   linux-image-powerpc [powerpc],
   linux-image-sparc64 [sparc],
@@ -62,7 +62,7 @@ Build-Depends: debhelper (>= 9),
   genisoimage,
   gfs2-utils,
 # gfs-tools,
-  grub-pc,
+  grub2 [i386 amd64 powerpc sparc],
   hfsplus,
   iproute,
   jfsutils,
@@ -93,14 +93,14 @@ Build-Depends: debhelper (>= 9),
   rsync,
   scrub,
   strace,
-  syslinux,
+  syslinux [i386 amd64],
   udev,
 # ufsutils,
   vim-tiny,
   xfsprogs,
   xz-utils,
   zerofree,
-  zfs-fuse,
+  zfs-fuse [i386 amd64 powerpc sparc],
 Homepage: http://libguestfs.org
 Standards-Version: 3.9.5
 Vcs-Git: git://git.debian.org/git/pkg-libvirt/libguestfs.git
