Automatically add appliance dependencies to libguestfs0

--- a/debian/control
+++ b/debian/control
@@ -161,40 +161,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
   qemu-system-ppc [powerpc],
   qemu-system-sparc [sparc],
   qemu-system-x86 [i386 amd64],
-  bsdmainutils,
-  btrfs-tools,
-  cryptsetup,
-  diffutils,
-# gfs-tools,
-# gfs2-tools,
-# grub-pc,
-# hfsplus,
-  iproute,
-  libaugeas0,
-# nilfs2-tools,
-  ntfs-3g (>> 1:2012.1.15AR.5-2.1~),
-  reiserfsprogs,
-  udev,
-  vim-tiny,
-  xz-utils,
-  zfs-fuse,
-  binutils,
-  cpio,
-  dosfstools,
-  file,
-  jfsutils,
-  kmod,
-  lsof,
-  lvm2,
-  net-tools,
-  parted,
-  procps,
-  scrub,
-  strace,
-  xfsprogs,
-  zerofree,
-  netpbm, icoutils,
-  ldmtool,
+  ${appliance:Depends}
 Description: guest disk image management system - shared library
  The libguestfs library allows accessing and modifying guest disk
  images. It offers the following features, among many others:
