On powerpc architecture, use qemu-system-ppc64 for -M pseries and linux-image-powerpc64

--- a/debian/rules
+++ b/debian/rules
@@ -15,7 +15,7 @@ BUILDS         := $(filter-out $(PYTHON_DEFAULT), $(PYTHONS)) \
 		  default
 
 QEMU_CPU := $(shell dpkg-architecture -qDEB_HOST_GNU_CPU \
-		    | sed -e 's,i[456]86,i386,;s,sparc,sparc64,;s,powerpc,ppc,;s,arm.*,arm,')
+		    | sed -e 's,i[456]86,i386,;s,sparc,sparc64,;s,powerpc,ppc64,;s,arm.*,arm,')
 
 DEFAULT_CONFIG_FLAGS = \
 	--disable-gnulib-tests     \
