--- a/debian/control
+++ b/debian/control
@@ -43,7 +43,7 @@ Build-Depends: debhelper (>= 9),
   linux-image-armmp [armhf],
   linux-image-4kc-malta [mips mipsel] | linux-image-5kc-malta [mips mipsel],
   linux-image-s390x [s390x],
-  linux-image-powerpc [powerpc],
+  linux-image-powerpc64 [powerpc],
   linux-image-sparc64 [sparc],
   linux-image-amd64 [amd64], linux-image-486 [i386] | linux-image-686-pae [i386],
   acl,
